# c-main

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: args.rs  lib.rs
test/: Cargo.toml
test/src/: main.rs
